--- a/.github/workflows/MyWorkflow.yml
+++ b/.github/workflows/MyWorkflow.yml
@@ -19,4 +19,4 @@ jobs:
         run: npm install
 
       - name: Build website
-        run: npm run build
+        run: cd bde-project && npm run build
