--- a/.github/workflows/MyWorkflow.yml
+++ b/.github/workflows/MyWorkflow.yml
@@ -11,6 +11,9 @@ jobs:
     environment: Test
     container:
       image: node
+    defaults:
+      run:
+        working-directory: ./bde-project
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -19,4 +22,4 @@ jobs:
         run: npm install
 
       - name: Build website
-        run: cd bde-project && npm run build
+        run: npm run build
