--- a/.github/workflows/MyWorkflow.yml
+++ b/.github/workflows/MyWorkflow.yml
@@ -23,3 +23,12 @@ jobs:
 
       - name: Build website
         run: npm run build
+
+      - name: FTP delivery
+        uses: SamKirkland/FTP-Deploy-Action@4.0.0
+        with:
+          server: ${{ vars.FTP_SERVER }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          server-dir: test/todo # test.jakubrepa.com/todo/
+          local-dir: ./bde-project/dist
