--- a/.github/workflows/MyWorkflow.yml
+++ b/.github/workflows/MyWorkflow.yml
@@ -30,5 +30,5 @@ jobs:
           server: ${{ vars.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          server-dir: test/todo/ # test.jakubrepa.com/BDE-Project/todo/
+          server-dir: test/todo/ # test.jakubrepa.com/todo/
           local-dir: ./bde-project/dist/
