--- a/.github/workflows/MyWorkflow.yml
+++ b/.github/workflows/MyWorkflow.yml
@@ -32,3 +32,15 @@ jobs:
           password: ${{ secrets.FTP_PASSWORD }}
           server-dir: test/todo/ # test.jakubrepa.com/todo/
           local-dir: ./bde-project/dist/
+
+      - name: Install Testcafe
+        run: npm install -g testcafe
+
+      - name: Update APT
+        run:  apt-get update
+
+      - name: Install Chromium
+        run: apt-get install -y chromium
+
+      - name: Run tests
+        run: testcafe chromium:headless test/*
