--- a/.github/workflows/MyWorkflow.yml
+++ b/.github/workflows/MyWorkflow.yml
@@ -43,4 +43,4 @@ jobs:
         run: apt-get install -y chromium
 
       - name: Run tests
-        run: testcafe chromium:headless test/*
+        run: testcafe chromium:headless src/todo-test.js
